--- a/supabase_1/package.json
+++ b/supabase_1/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
+    "chart.js": "^4.5.0",
     "react": "^19.1.0",
+    "react-charts": "^3.0.0-beta.57",
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
